# sva-var

./: .gitignore  README.md  analyze_rtl.py  requirements.txt
rtl_analyzer/analyzer_cpp/: CMakeLists.txt  cc.sh  run.sh  todo.txt
rtl_analyzer/analyzer_cpp/src/: DataModel.h  DependencyVisitor.cpp  DependencyVisitor.h  main.cpp
rtl_analyzer/ranker/: ranker.py  variable_scores_detailed.json
slang-out/include/slang/diagnostics/: AnalysisDiags.h  DeclarationsDiags.h  ExpressionsDiags.h  LexerDiags.h  LookupDiags.h  ParserDiags.h  SysFuncsDiags.h  TypesDiags.h
slang-out/lib/cmake/slang/: slangConfig.cmake  slangConfigVersion.cmake  slangTargets.cmake
slang-out/share/pkgconfig/: sv-lang.pc
test_suite/: test_10_interface.sv  test_1_basic_flow.sv  test_2_if_else_path.sv  test_3_case_statement.sv  test_4_generate_loop.sv  test_5_param_enum.sv  test_6_module_inst.sv  test_7_multicycle.sv  test_8_array_select.sv  test_9_struct_union.sv
test_suite/1_basic_dataflow/: test_basic.sv
test_suite/2_sequential_controlflow/: test_sequential.sv
test_suite/3_module_hierarchy/: sub_module.sv  top_module.sv
test_suite/4_complex_conditions/: test_complex_conditions.sv
test_suite/5_complex_hierarchy/: hierarchy.sv
test_suite/6_controlflow/: test_control_flow.sv
test_suite/7_datatypes/: test_data_types.sv
verify/: fix.py  optimize_weights.py  optimize_weights2.py  rank.py  verify.py  verify2.py
